fix(css): form/text input field: remove hover gap
Remove hover gap between input field and its label.

--- a/packages/css/src/form.scss
+++ b/packages/css/src/form.scss
@@ -34,13 +34,13 @@ $field-error-message-classname: '#{$field-classname}__error-message';
   & > .#{$field-label-classname} {
     display: block;
     order: 1;
-    margin-bottom: $spacing-base-2;
+    padding-bottom: $spacing-base-2;
     @include text-body-200();
   }
   & > .#{$field-error-message-classname} {
     display: block;
     order: 3;
-    margin-top: $spacing-base-2;
+    padding-top: $spacing-base-2;
     @include text-body-200();
     color: $color-interface-error;
   }
